[tool.poetry]
name = "svg-graph-extractor"
version = "0.1.0"
description = ""
authors = ["Finnkauski <iwiivi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "7.1.1"
matplotlib = "3.1.3"
numpy = "1.18.1"
pandas = "1.0.3"
svgpathtools = "1.3.3"
tqdm = "^4.45.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
